syntax = "proto3";

package proto.services;

option java_multiple_files = true;
option java_package = "proto.services.voluntario_externo";

import "google/protobuf/empty.proto";
import "dtos/voluntario_externo_dto.proto";

service VoluntarioExternoService {
  rpc crearVoluntarioExterno(proto.dtos.VoluntarioExternoProto) returns (proto.dtos.VoluntarioExternoProto);
}